Adicionadas as rotas 'createProduct': POST /produtos e 'updateProductById' PUT /produtos/{id}
